--- a/html/About.html
+++ b/html/About.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<link rel="stylesheet" href="../styles/style.css">
-<link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
 </head>
 <body class="bg-light">
   <!--Nav Start-->
@@ -32,8 +32,9 @@
       </div>
     </div>
   </nav>
-<!--Nav end--> <!--home section start-->
-  <section class="home py-5"></section>
+<!--Nav end--> 
+<!--About section start-->
+  <section class="About py-5"></section>
   <div class="container-lg">
     <div class="row min-vh-100 align-items-center align-content-center">
         <div class="col-md-6">
@@ -41,14 +42,15 @@
                 <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
             </div>
         </div>
-        <div class="homepage">
+        <div class="about">
           <div class="col-md-6 order-md-first">
             <div class="home-text">
                 <p class="text-muted mb-1">Hello I'm</p>
-                
-                <h1>Aspiring Web Developer</h1>
-                <h2>Asandile Langeni</h2>
-                <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. </p>
+                <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
+                D.O.B   : 95-10-13 <br>
+                Location : Cape Town, Khayelitsha <br>
+                Email     : asandilelangeni@gmail.com <br>
+                Phone     : 067 6555 678 </p>
                 <a href="#portfolio" class="btn"></a>
             </div>
         </div>
