--- a/html/Resume.html
+++ b/html/Resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
@@ -34,42 +34,47 @@
   </nav>
   <!--Nav end-->
   <!-- Education -->
- 
+    <h1>WORK AND EDUCATION</h1>
   <div class="timeline">
     <div class="container left">
       <div class="content">
-        <h2>2017</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        <h2>2021</h2>
+        <p>ACDC Dynamics <br>
+          Duration   : 10 months <br>
+          Duties     : Picker / Packer
       </div>
     </div>
     <div class="container right">
       <div class="content">
-        <h2>2016</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        <h2>2019</h2>
+        <p>IkamvaYouth <br>
+          Duration  : 6 months <br>
+          Duties    : Tutor <br>
+
+        </p>
       </div>
     </div>
     <div class="container left">
       <div class="content">
-        <h2>2015</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        <h2>2018</h2>
+        <p>Levi's <br>
+        Duration  :  6 months <br>
+        Duties    : Sales person</p>
+        </p>
       </div>
     </div>
     <div class="container right">
       <div class="content">
-        <h2>2012</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        <h2>2015-2020</h2>
+        <p>School: University of the Western Cape <br> 
+          Degree : Bachelor of Commerce (Economics and Information Systems)</p>
       </div>
     </div>
     <div class="container left">
       <div class="content">
-        <h2>2011</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
-      </div>
-    </div>
-    <div class="container right">
-      <div class="content">
-        <h2>2007</h2>
-        <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto primis ea eam.</p>
+        <h2>2014</h2>
+        <p>School : J. S Skenjana S.S.S <br>
+          Highest grade: Matric </p>
       </div>
     </div>
   </div>
@@ -77,3 +82,5 @@
     <p>Copyright &copy; 2022</p>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+</html>
