--- a/html/Skills.html
+++ b/html/Skills.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <link rel="stylesheet" href="../styles/style.css">
-  <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
 </head>
 <body class="bg-light">
   <!--Nav Start-->
@@ -34,12 +34,34 @@
   </nav>
   <!--Nav end-->
   <!---->
-  <ul>
-    <li><i class="bi bi-bootstrap"></i></li>
-    <li><i class="bi bi-filetype-html"></i></li>
-    <li><i class="bi bi-filetype-css"></i></li>
-  </ul>
+    <h1>SKILLS</h1>
+    <div class="container-fluid">
+      <div class="row g-5 justify-content-center">
+        <div class="col-11 col-md-3">
+          <a href="#"><img src="https://i.postimg.cc/jqkF8zwz/css.png" class="w-25" alt="css3"></a> <br>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+          </div>
+          
+        </div>
+        <div class="col-11 col-md-3">
+          <a href="#"><img src="https://i.postimg.cc/8PxPVJ3v/bootsrap.png" class="w-25" alt="bootstrap"></a>
+          <br>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
+          </div>
+        </div>
+        <div class="col-11 col-md-3">
+          <a href="#"><img src="https://i.postimg.cc/7ZLbxrYv/html5.png" class="w-25" alt="html5"></a>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-label="Example with label" style="width: 45%;" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">45%</div>
+          </div>
+        </div>
+      </div>
+
   <footer>
     <p>Copyright &copy; 2022</p>
 </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+</html>
