--- a/html/About.html
+++ b/html/About.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
 </head>
-<body class="bg-light">
+<body class="bg-dark">
   <!--Nav Start-->
   <nav class="navbar bg-light shadow-sm">
     <div class="container-lg">
@@ -27,41 +27,42 @@
           <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
           <li><a class="dropdown-item" href="Project.html">Projects</a></li>
           <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+          <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
           <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
         </ul>
       </div>
     </div>
   </nav>
 <!--Nav end--> 
-<!--About section start-->
-  <section class="About py-5"></section>
-  <div class="container-lg">
-    <div class="row min-vh-100 align-items-center align-content-center">
-        <div class="col-md-6">
-            <div class="home-img text-center">
-                <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
-            </div>
-        </div>
-        <div class="about">
-          <div class="col-md-6 order-md-first">
-            <div class="home-text">
-                <p class="text-muted mb-1">Hello I'm</p>
-                <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
-                D.O.B   : 95-10-13 <br>
-                Location : Cape Town, Khayelitsha <br>
-                Email     : asandilelangeni@gmail.com <br>
-                Phone     : 067 6555 678 </p>
-                <a href="#portfolio" class="btn"></a>
-            </div>
-        </div>
+  <!--About section start-->
+    <section class="About py-5"></section>
+    <div class="container-lg">
+      <div class="row min-vh-100 align-items-center align-content-center">
+          <div class="col-md-6">
+              <div class="home-img text-center">
+                  <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
+              </div>
+          </div>
+          <div class="about">
+            <div class="col-md-6 order-md-first">
+              <div class="home-text">
+                  <p class="text-muted mb-1">Hello I'm</p>
+                  <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
+                  D.O.B   : 95-10-13 <br>
+                  Location : Cape Town, Khayelitsha <br>
+                  Email     : asandilelangeni@gmail.com <br>
+                  Phone     : 067 6555 678 </p>
+                  <a href="#portfolio" class="btn"></a>
+              </div>
+          </div>
+      </div>
     </div>
-  </div>
-        </div>
-        
+          </div>
+          
 
 
 
-  <footer>
-    <p>Copyright &copy; 2022</p>
-</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <footer>
+      <p>Copyright &copy; 2022</p>
+  </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
