--- a/html/Contact.html
+++ b/html/Contact.html
@@ -10,39 +10,40 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
 </head>
-<body class="bg-light">
-  <!--Nav Start-->
-  <nav class="navbar bg-light shadow-sm">
-    <div class="container-lg">
-      <a class="navbar-brand text-black fw-bold fs-4" href="#">
-        <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
-      </a>
-      <div class="dropdown">
-        <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-         <i class="fas fa-bars"></i>
-        </button>
-        <ul class="dropdown-menu ">
-          <li><a class="dropdown-item" href="../Index.html">Home</a></li>
-          <li><a class="dropdown-item" href="About.html">About</a></li>
-          <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
-          <li><a class="dropdown-item" href="Project.html">Projects</a></li>
-          <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
-          <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
-        </ul>
+  <body class="bg-light">
+    <!--Nav Start-->
+    <nav class="navbar bg-light shadow-sm">
+      <div class="container-lg">
+        <a class="navbar-brand text-black fw-bold fs-4" href="#">
+          <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
+        </a>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars"></i>
+          </button>
+          <ul class="dropdown-menu ">
+            <li><a class="dropdown-item" href="../Index.html">Home</a></li>
+            <li><a class="dropdown-item" href="About.html">About</a></li>
+            <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
+            <li><a class="dropdown-item" href="Project.html">Projects</a></li>
+            <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+            <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
+            <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
-  <!--Nav end-->
-<!--Contact-->
-<div>
-  <i class="bi bi-facebook"></i>
-<p> Asandile Langeni</p> 
-<h2>Asandile Langeni</h2>
+    </nav>
+    <!--Nav end-->
+  <!--Contact-->
+    
+  <p> <i class="bi bi-facebook"></i>Asandile Langeni</p> 
+  <h1>Asandile Langeni</h1>
 
-</div>
-https://formspree.io/f/mbjbporv
-  <footer>
-    <p>Copyright &copy; 2022</p>
-</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  
+    <footer>
+      <p>Copyright &copy; 2022</p>
+  </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
+  </html>
