--- a/html/Project.html
+++ b/html/Project.html
@@ -10,28 +10,29 @@
     <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
 </head>
 <body class="bg-light">
-  <!--Nav Start-->
-  <nav class="navbar bg-light shadow-sm">
-    <div class="container-lg">
-      <a class="navbar-brand text-black fw-bold fs-4" href="#">
-        <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
-      </a>
-      <div class="dropdown">
-        <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <span class="navbar-toggler-icon"></span>
-         <i class="fas fa-bars"></i>
-        </button>
-        <ul class="dropdown-menu ">
-          <li><a class="dropdown-item" href="../Index.html">Home</a></li>
-          <li><a class="dropdown-item" href="About.html">About</a></li>
-          <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
-          <li><a class="dropdown-item" href="Project.html">Projects</a></li>
-          <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
-          <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
-        </ul>
+    <!--Nav Start-->
+    <nav class="navbar bg-light shadow-sm">
+      <div class="container-lg">
+        <a class="navbar-brand text-black fw-bold fs-4" href="#">
+          <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
+        </a>
+        <div class="dropdown">
+          <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <span class="navbar-toggler-icon"></span>
+          <i class="fas fa-bars"></i>
+          </button>
+          <ul class="dropdown-menu ">
+            <li><a class="dropdown-item" href="../Index.html">Home</a></li>
+            <li><a class="dropdown-item" href="About.html">About</a></li>
+            <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
+            <li><a class="dropdown-item" href="Project.html">Projects</a></li>
+            <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+            <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
+            <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
   <!--Nav end-->
 
   <footer>
