--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -49,31 +49,31 @@
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Athenkosi Freddie</h5>
+                  <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as aperson</p>
                   <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
               </div>
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Reece Simon</h5>
+                    <p class="card-text">For the short time I know Asandile he has been significantly amliorative towards assisting me. Definately is going to be successful going forward.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>            
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h5 class="card-title">Meezan Davids</h5>
+                    <p class="card-text">Asandile seems like a very nice guy to be in the presence. He is very good at sport and has a lot of takes on a lot of topics. Asandile looks like a respectable guy and will always be at help when in the need.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Joel Mukanya</h5>
                     <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project.
                         He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired.</p>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
