--- a/html/About.html
+++ b/html/About.html
@@ -35,34 +35,25 @@
   </nav>
 <!--Nav end--> 
   <!--About section start-->
-    <section class="About py-5"></section>
-    <div class="container-lg">
-      <div class="row min-vh-100 align-items-center align-content-center">
-          <div class="col-md-6">
-              <div class="home-img text-center">
-                  <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
-              </div>
-          </div>
-          <div class="about">
-            <div class="col-md-6 order-md-first">
-              <div class="home-text">
-                  <p class="text-muted mb-1">Hello I'm</p>
-                  <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
-                  D.O.B   : 95-10-13 <br>
-                  Location : Cape Town, Khayelitsha <br>
-                  Email     : asandilelangeni@gmail.com <br>
-                  Phone     : 067 6555 678 </p>
-                  <a href="#portfolio" class="btn"></a>
-              </div>
-          </div>
+    <main>
+      <div class="row min-vh-100 align-items-center d-f align-content-center">
+        <div class="col">
+          <p class="text-muted mb-1">Hello I'm</p>
+                      <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
+                      D.O.B   : 95-10-13 <br>
+                      Location : Cape Town, Khayelitsha <br>
+                      Email     : asandilelangeni@gmail.com <br>
+                      Phone     : 067 6555 678 </p>
+    
+        </div>
+        <div class="col">
+          <img src="https://i.postimg.cc/bJPWBS18/t381-LPkw-400x400.jpg" class="rounded-circle mw-100" alt="profile img">
+        </div>
       </div>
-    </div>
-          </div>
-          
-
-
-
+    </main>
     <footer>
       <p>Copyright &copy; 2022</p>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</body>
+</html>
