--- a/html/Contact.html
+++ b/html/Contact.html
@@ -35,15 +35,14 @@
       </div>
     </nav>
     <!--Nav end-->
-  <!--Contact-->
-    
-  <p> <i class="bi bi-facebook"></i>Asandile Langeni</p> 
-  <h1>Asandile Langeni</h1>
-
-  
-    <footer>
-      <p>Copyright &copy; 2022</p>
-  </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  </body>
-  </html>
+    <!--Contact-->
+      <main>
+        <p> <i class="bi bi-facebook"></i>Asandile Langeni</p> 
+        <h1>Asandile Langeni</h1>
+      </main>
+      <footer>
+        <p>Copyright &copy; 2022</p>
+    </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    </body>
+    </html>
