--- a/html/Resume.html
+++ b/html/Resume.html
@@ -1,88 +1,87 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
-</head>
-<body class="bg-light">
-    <!--Nav Start-->
-    <nav class="navbar bg-light shadow-sm">
-      <div class="container-lg">
-        <a class="navbar-brand text-black fw-bold fs-4" href="#">
-          <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
-        </a>
-        <div class="dropdown">
-          <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <span class="navbar-toggler-icon"></span>
-          <i class="fas fa-bars"></i>
-          </button>
-          <ul class="dropdown-menu ">
-            <li><a class="dropdown-item" href="../Index.html">Home</a></li>
-            <li><a class="dropdown-item" href="About.html">About</a></li>
-            <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
-            <li><a class="dropdown-item" href="Project.html">Projects</a></li>
-            <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
-            <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
-            <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!--Nav end-->
-    <!-- Education -->
-      <h2>WORK AND EDUCATION</h2>
-    <div class="timeline">
-      <div class="container left">
-        <div class="content">
-          <h2>2021</h2>
-          <p>ACDC Dynamics <br>
-            Duration   : 10 months <br>
-            Duties     : Picker / Packer
-        </div>
-      </div>
-      <div class="container right">
-        <div class="content">
-          <h2>2019</h2>
-          <p>IkamvaYouth <br>
-            Duration  : 6 months <br>
-            Duties    : Tutor <br>
-
-          </p>
-        </div>
-      </div>
-      <div class="container left">
-        <div class="content">
-          <h2>2018</h2>
-          <p>Levi's <br>
-          Duration  :  6 months <br>
-          Duties    : Sales person</p>
-          </p>
-        </div>
-      </div>
-      <div class="container right">
-        <div class="content">
-          <h2>2015-2020</h2>
-          <p>School: University of the Western Cape <br> 
-            Degree : Bachelor of Commerce (Economics and Information Systems)</p>
-        </div>
-      </div>
-      <div class="container left">
-        <div class="content">
-          <h2>2014</h2>
-          <p>School : J. S Skenjana S.S.S <br>
-            Highest grade: Matric </p>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>Document</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link rel="stylesheet" href="../styles/style.css">
+        <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
+    </head>
+    <body class="bg-light">
+        <!--Nav Start-->
+        <nav class="navbar bg-light shadow-sm">
+          <div class="container-lg">
+            <a class="navbar-brand text-black fw-bold fs-4" href="#">
+              <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
+            </a>
+            <div class="dropdown">
+              <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <span class="navbar-toggler-icon"></span>
+              <i class="fas fa-bars"></i>
+              </button>
+              <ul class="dropdown-menu ">
+                <li><a class="dropdown-item" href="../Index.html">Home</a></li>
+                <li><a class="dropdown-item" href="About.html">About</a></li>
+                <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
+                <li><a class="dropdown-item" href="Project.html">Projects</a></li>
+                <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+                <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
+                <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
+              </ul>
+            </div>
           </div>
-      </div>
-    </div>
-    
-    <footer>
-      <p>Copyright &copy; 2022</p>
-  </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-  </body>
-  </html>
+        </nav>
+        <!--Nav end-->
+        <!-- Education -->
+        <main>
+          <h2>WORK AND EDUCATION</h2>
+        <div class="timeline">
+          <div class="container left">
+            <div class="content">
+              <h2>2021</h2>
+              <p>ACDC Dynamics <br>
+                Duration   : 10 months <br>
+                Duties     : Picker / Packer
+            </div>
+          </div>
+          <div class="container right">
+            <div class="content">
+              <h2>2019</h2>
+              <p>IkamvaYouth <br>
+                Duration  : 6 months <br>
+                Duties    : Tutor <br></p>
+            </div>
+          </div>
+          <div class="container left">
+            <div class="content">
+              <h2>2018</h2>
+              <p>Levi's <br>
+              Duration  :  6 months <br>
+              Duties    : Sales person</p>
+              </p>
+            </div>
+          </div>
+          <div class="container right">
+            <div class="content">
+              <h2>2015-2020</h2>
+              <p>School: University of the Western Cape <br> 
+                Degree : Bachelor of Commerce (Economics and Information Systems)</p>
+            </div>
+          </div>
+          <div class="container left">
+            <div class="content">
+              <h2>2014</h2>
+              <p>School : J. S Skenjana S.S.S <br>
+                Highest grade: Matric </p>
+              </div>
+          </div>
+        </div>
+        </main>
+        <footer>
+          <p>Copyright &copy; 2022</p>
+      </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+      </body>
+      </html>
