--- a/Index.html
+++ b/Index.html
@@ -12,13 +12,13 @@
 </head>
 <body class="bg-light">
   <!--Nav Start-->
-    <nav class="navbar bg-light shadow-sm">
+    <nav class="navbar bg-dark">
       <div class="container-lg">
         <a class="navbar-brand text-black fw-bold fs-4" href="#">
           <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
         </a>
         <div class="dropdown">
-          <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
               <span class="navbar-toggler-icon"></span>
           <i class="fas fa-bars"></i>
           </button>
