--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -13,13 +13,13 @@
         </head>
         <body>
             <!--Nav Start-->
-            <nav class="navbar bg-light shadow-sm">
+            <nav class="navbar bg-dark shadow-sm">
                 <div class="container-lg">
                     <a class="navbar-brand text-black fw-bold fs-4" href="../Index.html">
                         <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
                     </a>
                     <div class="dropdown">
-                        <button class="btn btn-secondary btn-dark px-3" type="button" data-bs-toggle="dropdown"
+                        <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <span class="navbar-toggler-icon"></span>
                             <i class="fas fa-bars"></i>
