--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -42,15 +42,16 @@
             <main>
                 <div class="card-group">
                     <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text">I know I can count on Asandile to work with me on both large and small projects. He is loyal to his ethical conduct and, based on my professional experience, does not deviate from these values.
+                            He is easy-going, and caring, with a strong mentality and always ready to help others.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                     </div>
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://i.postimg.cc/P5HBJh0W/DSC-3590.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Athenkosi Freddie</h5>
                         <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as aperson</p>
@@ -66,7 +67,7 @@
                         </div>
                     </div>            
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://i.postimg.cc/HWJ8xCCP/DSC-3581.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Meezan Davids</h5>
                             <p class="card-text">Asandile seems like a very nice guy to be in the presence. He is very good at sport and has a lot of takes on a lot of topics. Asandile looks like a respectable guy and will always be at help when in the need.</p>
@@ -74,7 +75,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="https://i.postimg.cc/7ZFPwC2t/Joel-Profile.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Joel Mukanya</h5>
                             <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project.
