--- a/html/Contact.html
+++ b/html/Contact.html
@@ -64,11 +64,11 @@
                   </form>
               </main>
             <footer>
-        <p class="text-muted"><i class="bi bi-phone"></i></p>
-        <p class="text-muted"><i class="bi bi-envelope-fill"></i></p>
-        <a href="" target="_blank"> <i class="fa-brands fa-twitter"></i><i class="bi bi-twitter"></i></a>
-        <a href="" target="_blank"><i class="fab fa-linkedin-in"></i><i class="bi bi-linkedin"></i></a>
-        <a href=""><i class="bi bi-github"></i></a>
+        <p class="text-muted"><i class="bi bi-phone"></i>0676555678</p>
+        <p class="text-muted"><i class="bi bi-envelope-fill"></i>asandilelangeni@gmail.com</p>
+        <a href="https://mobile.twitter.com/la_nator21" target="_blank"> <i class="fa-brands fa-twitter"></i><i class="bi bi-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/asandile-langeni-05b027201/" target="_blank"><i class="fab fa-linkedin-in"></i><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Asandile26"><i class="bi bi-github"></i></a>
         <p>Copyright &copy; 2022</p>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
