--- a/Index.html
+++ b/Index.html
@@ -38,16 +38,15 @@
   <!--home section start-->
     <main>
       <section class="home py-5">
-      <div class="container-lg">
+      <div class="container-md">
         <div class="row min-vh-100 align-items-center align-content-center">
             <div class="col-md-6">
                 
             </div>
-            <div class="home-text">
-              <p class="text-muted mb-1">Hello I'm</p>
-              
-              <h2>Aspiring Web Developer</h2>
+            <div>
+              <p>Hello I'm</p>
               <h1>Asandile Langeni</h1>
+              <h2>Aspiring Web Developer</h2>
               <p class="mt-4 text-muted"></p>
               <a href="#portfolio" class="btn"></a>
           </div>
@@ -57,7 +56,6 @@
         </div>
       </section>
     </main>
-
     <footer>
       <p>Copyright &copy; 2022</p>
     </footer>
