--- a/html/About.html
+++ b/html/About.html
@@ -38,8 +38,8 @@
     <main>
       <div class="row min-vh-100 align-items-center d-f align-content-center">
         <div class="col">
-          <p class="text-muted mb-1">Hello I'm</p>
-                      <p class="mt-4 text-muted">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
+          <p class=" mb-1" id="about-p1">Hello I'm</p>
+                      <p class="mt-4 " id="about-p">I am a 27 years aspiring web Developer, I am all about breaking boundaries in order to create something new. Coding excites me because the world is becoming more technological and coding provides me with the Skills to usher people to the right direction whether it is using apps or data mining. <br>
                       D.O.B   : 95-10-13 <br>
                       Location : Cape Town, Khayelitsha <br>
                       Email     : asandilelangeni@gmail.com <br>
