--- a/html/Project.html
+++ b/html/Project.html
@@ -1,46 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
-</head>
-<body class="bg-light">
-    <!--Nav Start-->
-    <nav class="navbar bg-dark shadow-sm">
-      <div class="container-lg">
-        <a class="navbar-brand text-black fw-bold fs-4" href="#">
-          <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
-        </a>
-        <div class="dropdown">
-          <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <span class="navbar-toggler-icon"></span>
-          <i class="fas fa-bars"></i>
-          </button>
-          <ul class="dropdown-menu ">
-            <li><a class="dropdown-item" href="../Index.html">Home</a></li>
-            <li><a class="dropdown-item" href="About.html">About</a></li>
-            <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
-            <li><a class="dropdown-item" href="Project.html">Projects</a></li>
-            <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
-            <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
-            <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  <!--Nav end-->
-  <main>
-
-  </main>
-
-  <footer>
-    <p>Copyright &copy; 2022</p>
-</footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-</body>
-</html>
+              <!DOCTYPE html>
+              <html lang="en">
+              <head>
+                  <meta charset="UTF-8">
+                  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+                  <title>Document</title>
+                  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+                  <link rel="stylesheet" href="../styles/style.css">
+                  <link rel="icon" href="https://i.postimg.cc/xCpZ3FsW/LA.webp" type="image/x-icon" />
+              </head>
+              <body class="bg-light">
+                  <!--Nav Start-->
+                  <nav class="navbar bg-dark shadow-sm">
+                    <div class="container-lg">
+                      <a class="navbar-brand text-black fw-bold fs-4" href="#">
+                        <img class="logo" src="https://i.postimg.cc/44MyFfqS/Free-Sample-By-Wix.jpg" alt="">
+                      </a>
+                      <div class="dropdown">
+                        <button class="btn btn-secondary btn-light px-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <span class="navbar-toggler-icon"></span>
+                        <i class="fas fa-bars"></i>
+                        </button>
+                        <ul class="dropdown-menu ">
+                          <li><a class="dropdown-item" href="../Index.html">Home</a></li>
+                          <li><a class="dropdown-item" href="About.html">About</a></li>
+                          <li><a class="dropdown-item" href="Resume.html">Resume</a></li>
+                          <li><a class="dropdown-item" href="Project.html">Projects</a></li>
+                          <li><a class="dropdown-item" href="Skills.html">Skills</a></li>
+                          <li><a class="dropdown-item" href="Testimonials.html">Testimonials</a></li>
+                          <li><a class="dropdown-item" href="Contact.html">Contacts</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+                <!--Nav end-->
+                <!--Project-->
+                <main>
+                  <h2>PROJECTS</h2>
+                  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner justify-content-center">
+                      <div class="carousel-item active">
+                        <div class="card m-auto" style="width: 25rem; height: 30rem;">
+                          <img src="https://i.postimg.cc/tTD0JLkg/Ecommerce.png" class="d-block h-100 w-100 m-auto" alt="e-commerce">
+                          <div class="card-body">
+                            <h5 class="card-title">E-commerce</h5>
+                            <p class="card-text"><a href="https://github.com/Asandile26/Ecommerce.git">github</a> <a href="https://asandilelangeniecommerce.netlify.app">netlify</a></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card m-auto" style="width: 25rem; height: 30rem;">
+                          <img src="https://i.postimg.cc/tJ0rXDQg/Screenshot-2022-11-05-095815.png" class="d-block h-50 w-100 m-auto" alt="Revision">
+                          <div class="card-body">
+                            <h5 class="card-title">Revision</h5>
+                            <p class="card-text"><a href="https://github.com/Asandile26/Revision.git">github</a> <a href="revisionasandile.netlify.app">netlify</a></p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card m-auto" style="width: 25rem; height: 30rem;">
+                          <img src="https://i.postimg.cc/Dyt794zy/css-media2.png" class="d-block h-50 w-75 m-auto" alt="css-media">
+                          <div class="card-body">
+                            <h5 class="card-title">css-media-query</h5>
+                            <p class="card-text"><a href="https://github.com/Asandile26/ccs-media-querries.git">github</a> <a href="https://css-media-queryasandilelangeni.netlify.app">netlify</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </main>
+                <footer>
+                  <p>Copyright &copy; 2022</p>
+              </footer>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+              </body>
+              </html>
