--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -40,56 +40,75 @@
             <!--Testimonials-->
             <h2>Testimonials</h2> 
             <main>
-                <div class="card-group">
-                    <div class="card">
-                    <img src="" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title"></h5>
-                        <p class="card-text">I know I can count on Asandile to work with me on both large and small projects. He is loyal to his ethical conduct and, based on my professional experience, does not deviate from these values.
-                            He is easy-going, and caring, with a strong mentality and always ready to help others.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                    </div>
-                    <div class="card">
-                        <img src="https://i.postimg.cc/P5HBJh0W/DSC-3590.jpg" class="card-img-top" alt="...">
+                <div class="row row-cols-1 row-cols-md-5 g-4">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://i.postimg.cc/J0FDZYxN/DSC-3589.jpg" class="card-img-top" alt="Athenkosi-profile">
                         <div class="card-body">
-                        <h5 class="card-title">Athenkosi Freddie</h5>
-                        <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as aperson</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <h5 class="card-title">Athenkosi Freddie</h5>
+                          <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as aperson</p>
                         </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
                     </div>
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://i.postimg.cc/ZnWQqX26/DSC-3538.jpg" class="card-img-top" alt="Umayr-profile">
                         <div class="card-body">
-                            <h5 class="card-title">Reece Simon</h5>
-                            <p class="card-text">For the short time I know Asandile he has been significantly amliorative towards assisting me. Definately is going to be successful going forward.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <h5 class="card-title">Umayr Nordien</h5>
+                          <p class="card-text">I know I can count on Asandile to work with me on both large and small projects. He is loyal to his ethical conduct and, based on my professional experience, does not deviate from these values. He is easy-going, and caring, with a strong mentality and always ready to help others.</p>
                         </div>
-                    </div>            
-                    <div class="card">
-                        <img src="https://i.postimg.cc/HWJ8xCCP/DSC-3581.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Meezan Davids</h5>
-                            <p class="card-text">Asandile seems like a very nice guy to be in the presence. He is very good at sport and has a lot of takes on a lot of topics. Asandile looks like a respectable guy and will always be at help when in the need.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
                         </div>
+                      </div>
                     </div>
-                    <div class="card">
-                        <img src="https://i.postimg.cc/7ZFPwC2t/Joel-Profile.jpg" class="card-img-top" alt="...">
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://i.postimg.cc/x85wkK1S/DSC-3508.jpg" class="card-img-top" id="Reece-img" alt="Reece profile">
                         <div class="card-body">
-                            <h5 class="card-title">Joel Mukanya</h5>
-                            <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project.
-                                He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                          <h5 class="card-title">Reece Simon</h5>
+                          <p class="card-text">For the short time I know Asandile he has been significantly amliorative towards assisting me. Definately is going to be successful going forward.</p>
                         </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
                     </div>
-                </div>
-            </main>
-            <footer>
-                <p>Copyright &copy; 2022</p>
-            </footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-                crossorigin="anonymous"></script>
-        </body>
-        </html>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://i.postimg.cc/7ZFPwC2t/Joel-Profile.jpg" class="card-img-top" alt="Joel-Profile">
+                        <div class="card-body">
+                          <h5 class="card-title">Joel Mukanya</h5>
+                          <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project.
+                            He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired.</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100">
+                        <img src="https://i.postimg.cc/HWJ8xCCP/DSC-3581.jpg" class="card-img-top" alt="Meezan profile">
+                        <div class="card-body">
+                          <h5 class="card-title">Meezan Davids</h5>
+                          <p class="card-text"></p>Asandile seems like a very nice guy to be in the presence. He is very good at sport and has a lot of takes on a lot of topics. Asandile looks like a respectable guy and will always be at help when in the need.</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">Last updated 3 mins ago</small>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </main>
+                <footer>
+                    <p>Copyright &copy; 2022</p>
+                </footer>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+                    crossorigin="anonymous"></script>
+                </body>
+                </html>
