--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -46,7 +46,7 @@
                         <img src="https://i.postimg.cc/J0FDZYxN/DSC-3589.jpg" class="card-img-top" alt="Athenkosi-profile">
                         <div class="card-body">
                           <h5 class="card-title">Athenkosi Freddie</h5>
-                          <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as aperson</p>
+                          <p class="card-text">Asandile is a super nice person who is open & wise. He is always open to helping others and He is not afraid to express himself. He is a visionary and futurist, He is always open to learning about the people around annd also an amzing conversationalist. I am glad to know him as a person</p>
                         </div>
                         <div class="card-footer">
                           <small class="text-muted">Last updated 3 mins ago</small>
@@ -82,8 +82,7 @@
                         <img src="https://i.postimg.cc/7ZFPwC2t/Joel-Profile.jpg" class="card-img-top" alt="Joel-Profile">
                         <div class="card-body">
                           <h5 class="card-title">Joel Mukanya</h5>
-                          <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project.
-                            He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired.</p>
+                          <p class="card-text">Asandile is a very creative and well-behaved student. He does enjoy working with his classmates and works well on his project. He has gained knowledge of web development, including Bootstrap 5. I will be very delighted to see him get hired.</p>
                         </div>
                         <div class="card-footer">
                           <small class="text-muted">Last updated 3 mins ago</small>
