--- a/html/Contact.html
+++ b/html/Contact.html
@@ -47,12 +47,12 @@
                           <input type="text" class="form-control" id="exampleInputName1" name="fullname" aria-describedby="nameHelp" placeholder="Enter your name" required>
                         </div>
                       <div class="mb-3 text-align-center">
-                        <input type="email" class="form-control" id="exampleInputEmail1" name="Email" aria-describedby="emailHelp" placeholder="Enter your surname" required>
+                        <input type="text" class="form-control" id="exampleInputEmail1" name="Email" aria-describedby="emailHelp" placeholder="Enter your surname" required>
                         <div id="emailHelp" class="form-text"></div>
                       </div>
                       <div class="mb-3 text-align-center">
                         <!-- <textarea name="" id="" cols="30" rows="10"></textarea> -->
-                        <input type="text" class="form-control" id="exampleInputmessage1" name="message" placeholder="Enter your email" required>
+                        <input type="email" class="form-control" id="exampleInputmessage1" name="message" placeholder="Enter your email" required>
                         <div id="messagedHelp" class="form-text"></div>
                       </div>
                       <div class="form-floating mb-4">
